--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
     <link rel="stylesheet" href="js/jquery/jquery-ui.min.css">
     <script src="js/jquery/external/jquery/jquery.js"></script>
     <script src="js/jquery/jquery-ui.min.js"></script>
+
+    <script src="js/monster.js"></script>
+
 </head>
 
 <body>
@@ -25,7 +29,7 @@
         <h3>search parameters</h3>
         <p>Enter search parameters here.</p>
 
-        <form>
+        <form id="monsterSearchForm" onsubmit="Core.onSubmit()">
             Monster name:<br/>
             <input type="text" name="monstername" value="" id="monstername">
 
@@ -40,38 +44,47 @@
             <br/>
 
             Monster CR:<br/>
-                <select name="Cr" id="crselect">
-                    <option value=".125">1/8</option>
-                    <option value=".25">1/4 </option>
-                    <option value=".5">1/2</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                    <option value="24">24</option>
-                    <option value="25">25</option>
-                </select>
+            <select name="Cr" id="crselect">
+                <option value="any">Any</option>
+                <option value=".125">1/8</option>
+                <option value=".25">1/4 </option>
+                <option value=".5">1/2</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+            </select>
 
-            <br/>
+
+
+            <select name="name comparison" id="crcompareselect">
+                <option value="=">is</option>
+                <option value=">=">greater than</option>
+                <option value="<=">less than</option>
+            </select>
+
+            </br>
 
             Monster Type<br/>
             <fieldset>
@@ -130,13 +143,7 @@
 
 
 <script>
-$(document).ready(function(){
-    $( "#monsterTypes" ).controlgroup();
-    $( "#crselect" ).selectmenu();
-    $( "#namecompareselect" ).selectmenu();
-    $( "#monstername" ).autocomplete();
-    $( "#tabs" ).tabs();
-});
+$(document).ready(Core.startup());
 </script>
 
 </body>
