Refactor the javascript that submits the parameters

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,48 +46,53 @@
             Monster CR:<br/>
             <select name="Cr" id="crselect">
                 <option value="any">Any</option>
-                <option value=".125">1/8</option>
-                <option value=".25">1/4 </option>
-                <option value=".5">1/2</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
+                <option value=".125">1/8(25XP)</option>
+                <option value=".25">1/4(50XP) </option>
+                <option value=".5">1/2(100XP)</option>
+                <option value="1">1(200XP)</option>
+                <option value="2">2(450XP)</option>
+                <option value="3">3(700XP)</option>
+                <option value="4">4(1,100XP)</option>
+                <option value="5">5(1,800)XP</option>
+                <option value="6">6(2,300XP)</option>
+                <option value="7">7(2,900XP)</option>
+                <option value="8">8(3,900XP)</option>
+                <option value="9">9(5,000XP)</option>
+                <option value="10">10(5,900XP)</option>
+                <option value="11">11(7,200XP)</option>
+                <option value="12">12(8,400XP)</option>
+                <option value="13">13(10,000XP)</option>
+                <option value="14">14(11,500XP)</option>
+                <option value="15">15(13,000XP)</option>
+                <option value="16">16(15,000XP)</option>
+                <option value="17">17(18,000XP)</option>
+                <option value="18">18(20,000XP)</option>
+                <option value="19">19(22,000XP)</option>
+                <option value="20">20(25,000XP)</option>
+                <option value="21">21(33,000XP)</option>
+                <option value="22">22(41,000XP)</option>
+                <option value="23">23(50,000XP)</option>
+                <option value="24">24(62,000XP)</option>
+                <option value="25">25(75,000XP)</option>
+                <option value="26">26(90,000XP)</option>
+                <option value="27">27(105,000XP)</option>
+                <option value="28">28(120,000XP)</option>
+                <option value="29">29(135,000XP)</option>
+                <option value="30">30(155,000XP)</option>
             </select>
 
 
 
-            <select name="name comparison" id="crcompareselect">
-                <option value="=">is</option>
-                <option value=">=">greater than</option>
-                <option value="<=">less than</option>
+            <select name="cr comparison" id="crcompareselect">
+                <option value="=">equal to</option>
+                <option value=">=">greater than or equal to</option>
+                <option value="<=">less than or equal to</option>
             </select>
 
             </br>
 
             Monster Type<br/>
-            <fieldset>
+            <fieldset id="checkboxfieldset">
                 <div id="monsterTypes">
                     <label for="abberation-type">Abberation</label>
                     <input type="checkbox" name="Abberation" id="abberation-type"> <br/>
