Add javascript for POST method for monster search

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
         <h3>search parameters</h3>
         <p>Enter search parameters here.</p>
 
-        <form id="monsterSearchForm" onsubmit="Core.onSubmit()">
+        <form id="monsterSearchForm">
             Monster name:<br/>
             <input type="text" name="monstername" value="" id="monstername">
 
@@ -119,7 +119,7 @@
                 </div>
             </fieldset>
 
-            <input type="submit" value="Submit">
+            <input type="button" id="searchSubmit" value="Search">
         </form>
     </div>
 
