--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,10 +6,22 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="js/jquery/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/monster_misc.css">
+
     <script src="js/jquery/external/jquery/jquery.js"></script>
     <script src="js/jquery/jquery-ui.min.js"></script>
+    <!--<script src="js/datatable/datatables.min.js"></script>-->
 
-    <script src="js/monster.js"></script>
+    <script src="js/monsterSearchPage.js"></script>
+    <script src="js/monsterSearchResults.js"></script>
+
+    <link rel = "stylesheet" href = "datatables/datatables.min.css">
+    <script src = "datatables/datatables.min.js"></script>
+
+
+
+
+
 
 </head>
 
@@ -18,7 +30,7 @@
 <div id="tabs">
 
     <ul>
-        <li><a href="#tabs-monstersearch">Search</a></li>
+        <li><a href="#tabs-monstersearch" class="active">Search</a></li>
         <li><a href="#tabs-monstersearchresults">Search Results</a></li>
         <li><a href="#tabs-encounterbuilder">Builder</a></li>
         <li><a href="#tabs-encounterbuilderresults">Builder Results</a></li>
@@ -94,8 +106,8 @@
             Monster Type<br/>
             <fieldset id="checkboxfieldset">
                 <div id="monsterTypes">
-                    <label for="abberation-type">Abberation</label>
-                    <input type="checkbox" name="Abberation" id="abberation-type"> <br/>
+                    <label for="aberation-type">Aberation</label>
+                    <input type="checkbox" name="ABERRATION" id="aberation-type"> <br/>
                     <label for="beast-type">Beast</label>
                     <input type="checkbox" name="Beast" id="beast-type"> <br/>
                     <label for="dragon-type">Dragon</label>
@@ -106,8 +118,8 @@
                     <input type="checkbox" name="Fiend" id="fiend-type"> <br/>
                     <label for="giant-type">Giant</label>
                     <input type="checkbox" name="Giant" id="giant-type"> <br/>
-                    <label for="monstrocity-type">Monstrocity</label>
-                    <input type="checkbox" name="Monstrocity" id="monstrocity-type"> <br/>
+                    <label for="Monstrosity-type">Monstrosity</label>
+                    <input type="checkbox" name="Monstrosity" id="Monstrosity-type"> <br/>
                     <label for="npc-type">NPC</label>
                     <input type="checkbox" name="NPC" id="npc-type"> <br/>
                     <label for="ooze-type">Ooze</label>
@@ -131,7 +143,17 @@
 
     <div id="tabs-monstersearchresults">
         <h3>results</h3>
-        <p>here are the results of the search.</p>
+       <table id="monstersearchresultsTableHolder">
+        <thead>
+           <tr>
+            <th>Name</th>
+            <th>CR</th>
+            <th>XpValue</th>
+            <th>Page Number</th>
+            <th>Type</th>
+           </tr>
+        </thead>
+       </table>
     </div>
 
     <div id="tabs-encounterbuilder">
@@ -148,7 +170,7 @@
 
 
 <script>
-$(document).ready(Core.startup());
+$(document).ready(SearchPage.startup());
 </script>
 
 </body>
