finishes implementing front end for encounter builder

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -266,6 +266,20 @@
 
 
     <div id="tabs-encounterbuilderresults">
+
+        <table id = "encounterSearchResultsXpTableHolder" class = "monsterList">
+
+            <thead>
+            <tr>
+                <th>Number of Monsters</th>
+                <th>Total Xp for Easy Encounter</th>
+                <th>Total Xp for Medium Encounter</th>
+                <th>Total Xp for Hard Encounter</th>
+                <th> Total Xp for Deadly Encounter</th>
+            </tr>
+            </thead>
+
+        </table>
         <h3>results</h3>
         <table id="encounterSearchResultsMonsterTableHolder" class="monsterList">
             <thead>
