Add support for Mordenkainen's Tome of Foes, minor fixes
Minor fixes include adding Humanoid as valid type on all search pages,
adding a proper Title to the index.html page and cleaning up
boilerplate text on the error.html page.

--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MonDb error page</title>
+    <title>MonDb Error Page</title>
 </head>
 <body>
 
-This is some text
+An error occurred with your request.
 
 </body>
 </html>
