--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MonDb - 5e Monsters </title>
 
     <link rel="stylesheet" href="js/jquery/jquery-ui.min.css">
     <link rel="stylesheet" href="css/monster_misc.css">
@@ -18,11 +18,6 @@
 
     <link rel="stylesheet" type="text/css" href="datatables/datatables.min.css">
     <script type="text/javascript" src="datatables/datatables.min.js"></script>
-
-
-
-
-
 
 </head>
 
@@ -176,6 +171,11 @@
                         <input type="checkbox" name="Swarm" id="swarm-type" class="monTypeSearch">
                         <label for="undead-type" class="checkbox">Undead</label>
                         <input type="checkbox" name="Undead" id="undead-type" class="monTypeSearch">
+
+                        <br/>
+
+                        <label for="humanoid-type" class="checkbox">Humanoid</label>
+                        <input type="checkbox" name="Humanoid" id="humanoid-type" class="monTypeSearch">
                     </div>
             </div>
 
@@ -245,7 +245,7 @@
                         <label for="dragonEncounter-type" class="checkbox">Dragon</label>
                         <input type="checkbox" name="Dragon" id="dragonEncounter-type" class="monTypeEncounter">
 
-                        </br>
+                        <br/>
 
                         <label for="elementalEncounter-type" class="checkbox">Elemental</label>
                         <input type="checkbox" name="Elemental" id="elementalEncounter-type" class="monTypeEncounter">
@@ -254,7 +254,7 @@
                         <label for="fiendEncounter-type" class="checkbox">Fiend</label>
                         <input type="checkbox" name="Fiend" id="fiendEncounter-type" class="monTypeEncounter">
 
-                        </br>
+                        <br/>
 
                         <label for="giantEncounter-type" class="checkbox">Giant</label>
                         <input type="checkbox" name="Giant" id="giantEncounter-type" class="monTypeEncounter">
@@ -263,7 +263,7 @@
                         <label for="npcEncounter-type" class="checkbox">NPC</label>
                         <input type="checkbox" name="NPC" id="npcEncounter-type" class="monTypeEncounter">
 
-                        </br>
+                        <br/>
 
                         <label for="oozeEncounter-type" class="checkbox">Ooze</label>
                         <input type="checkbox" name="Ooze" id="oozeEncounter-type" class="monTypeEncounter">
@@ -271,6 +271,12 @@
                         <input type="checkbox" name="Swarm" id="swarmEncounter-type" class="monTypeEncounter">
                         <label for="undeadEncounter-type" class="checkbox">Undead</label>
                         <input type="checkbox" name="Undead" id="undeadEncounter-type" class="monTypeEncounter">
+
+                        <br/>
+
+                        <label for="humanoidEncounter-type" class="checkbox">Humanoid</label>
+                        <input type="checkbox" name="Humanoid" id="humanoidEncounter-type" class="monTypeEncounter">
+
                     </div>
                 </div>
             </div>
