Fixed searching by beast monster Type
Searching for beast type showed non-beast results, this bug is now fixed.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -141,7 +141,7 @@
                         <label for="aberration-type" class="checkbox">Aberration</label>
                         <input type="checkbox" name="ABERRATION" id="aberration-type" class="monTypeSearch">
                         <label for="beast-type" class="checkbox">Beast</label>
-                        <input type="checkbox" name="Beast" id="beast-type">
+                        <input type="checkbox" name="Beast" id="beast-type" class="monTypeSearch">
                         <label for="dragon-type" class="checkbox">Dragon</label>
                         <input type="checkbox" name="Dragon" id="dragon-type" class="monTypeSearch">
 
